--- a/IOT/packages.config
+++ b/IOT/packages.config
@@ -1,78 +1,79 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CoAP.NET.Core" version="1.1.0" targetFramework="net462" />
-  <package id="Common.Logging" version="3.4.0" targetFramework="net462" />
-  <package id="Common.Logging.Core" version="3.4.0" targetFramework="net462" />
-  <package id="FreeRedis" version="1.2.14" targetFramework="net462" />
+  <package id="Common.Logging" version="3.4.1" targetFramework="net462" />
+  <package id="Common.Logging.Core" version="3.4.1" targetFramework="net462" />
+  <package id="csredis" version="3.2.1" targetFramework="net462" />
+  <package id="FreeRedis" version="1.2.15" targetFramework="net462" />
   <package id="InfluxDB.Client" version="4.14.0" targetFramework="net462" />
   <package id="InfluxDB.Client.Core" version="4.14.0" targetFramework="net462" />
   <package id="JsonSubTypes" version="2.0.1" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Logging" version="2.0.0" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Options" version="2.0.0" targetFramework="net462" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net462" />
+  <package id="Microsoft.Bcl.HashCode" version="1.1.1" targetFramework="net462" />
+  <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="8.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="8.0.1" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Logging" version="8.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="8.0.1" targetFramework="net462" />
+  <package id="Microsoft.Extensions.ObjectPool" version="8.0.3" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Options" version="8.0.2" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Primitives" version="8.0.0" targetFramework="net462" />
+  <package id="Microsoft.Net.Http.Headers" version="2.2.8" targetFramework="net462" />
+  <package id="Microsoft.NETCore.Platforms" version="7.0.4" targetFramework="net462" />
+  <package id="MQTTnet" version="3.1.2" targetFramework="net462" />
+  <package id="NetTopologySuite" version="2.5.0" targetFramework="net462" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net462" />
+  <package id="NodaTime" version="3.1.11" targetFramework="net462" />
+  <package id="NodaTime.Serialization.JsonNet" version="3.1.0" targetFramework="net462" />
+  <package id="Npgsql" version="8.0.2" targetFramework="net462" />
   <package id="NRediSearch" version="2.2.79" targetFramework="net462" />
   <package id="NRedisStack" version="0.12.0" targetFramework="net462" />
-  <package id="NetTopologySuite" version="2.5.0" targetFramework="net462" />
+  <package id="Pipelines.Sockets.Unofficial" version="2.2.8" targetFramework="net462" />
   <package id="RedLock.net" version="2.3.2" targetFramework="net462" />
+  <package id="RestSharp" version="110.2.0" targetFramework="net462" />
   <package id="ServiceStack.Common" version="8.2.2" targetFramework="net462" />
   <package id="ServiceStack.Interfaces" version="8.2.2" targetFramework="net462" />
   <package id="ServiceStack.Redis" version="8.2.2" targetFramework="net462" />
   <package id="ServiceStack.Text" version="8.2.2" targetFramework="net462" />
-  <package id="System.Net.Security" version="4.3.2" targetFramework="net462" />
-  <package id="System.Collections.NonGeneric" version="4.3.0" targetFramework="net462" />
-  <package id="System.Data.Common" version="4.3.0" targetFramework="net462" />
-  <package id="System.Dynamic.Runtime" version="4.3.0" targetFramework="net462" />
-  <package id="System.Net.NetworkInformation" version="4.3.0" targetFramework="net462" />
-  <package id="System.Net.Requests" version="4.3.0" targetFramework="net462" />
-  <package id="System.Reflection.TypeExtensions" version="4.7.0" targetFramework="net462" />
-  <package id="System.Runtime" version="4.3.1" targetFramework="net462" />
-  <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="net462" />
-  <package id="csredis" version="3.2.1" targetFramework="net462" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net462" />
-  <package id="Microsoft.Bcl.HashCode" version="1.1.1" targetFramework="net462" />
-  <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net462" />
-  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="8.0.0" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Logging.Abstractions" version="8.0.0" targetFramework="net462" />
-  <package id="Microsoft.Extensions.ObjectPool" version="7.0.13" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Primitives" version="2.2.0" targetFramework="net462" />
-  <package id="Microsoft.Net.Http.Headers" version="2.2.8" targetFramework="net462" />
-  <package id="Microsoft.NETCore.Platforms" version="2.0.0" targetFramework="net462" />
-  <package id="MQTTnet" version="3.0.16" targetFramework="net462" />
-  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net462" />
-  <package id="NodaTime" version="3.1.9" targetFramework="net462" />
-  <package id="NodaTime.Serialization.JsonNet" version="3.1.0" targetFramework="net462" />
-  <package id="Npgsql" version="8.0.2" targetFramework="net462" />
-  <package id="Pipelines.Sockets.Unofficial" version="2.2.8" targetFramework="net462" />
-  <package id="RestSharp" version="110.1.0" targetFramework="net462" />
-  <package id="StackExchange.Redis" version="2.7.17" targetFramework="net462" />
+  <package id="StackExchange.Redis" version="2.7.33" targetFramework="net462" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net462" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net462" />
   <package id="System.Collections.Immutable" version="8.0.0" targetFramework="net462" />
+  <package id="System.Collections.NonGeneric" version="4.3.0" targetFramework="net462" />
   <package id="System.Collections.Specialized" version="4.3.0" targetFramework="net462" />
   <package id="System.ComponentModel.Primitives" version="4.3.0" targetFramework="net462" />
-  <package id="System.Configuration.ConfigurationManager" version="6.0.1" targetFramework="net462" />
+  <package id="System.Configuration.ConfigurationManager" version="8.0.0" targetFramework="net462" />
+  <package id="System.Data.Common" version="4.3.0" targetFramework="net462" />
   <package id="System.Data.Odbc" version="8.0.0" targetFramework="net462" />
   <package id="System.Diagnostics.DiagnosticSource" version="8.0.0" targetFramework="net462" />
+  <package id="System.Dynamic.Runtime" version="4.3.0" targetFramework="net462" />
   <package id="System.IO" version="4.3.0" targetFramework="net462" />
   <package id="System.IO.Compression" version="4.3.0" targetFramework="net462" />
-  <package id="System.IO.Pipelines" version="5.0.1" targetFramework="net462" />
+  <package id="System.IO.Pipelines" version="8.0.0" targetFramework="net462" />
   <package id="System.Memory" version="4.5.5" targetFramework="net462" />
   <package id="System.Net.NameResolution" version="4.3.0" targetFramework="net462" />
+  <package id="System.Net.NetworkInformation" version="4.3.0" targetFramework="net462" />
+  <package id="System.Net.Requests" version="4.3.0" targetFramework="net462" />
+  <package id="System.Net.Security" version="4.3.2" targetFramework="net462" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="net462" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net462" />
   <package id="System.Reactive" version="6.0.0" targetFramework="net462" />
-  <package id="System.Reflection.DispatchProxy" version="4.4.0" targetFramework="net462" />
+  <package id="System.Reflection.DispatchProxy" version="4.7.1" targetFramework="net462" />
+  <package id="System.Reflection.TypeExtensions" version="4.7.0" targetFramework="net462" />
+  <package id="System.Runtime" version="4.3.1" targetFramework="net462" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net462" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net462" />
+  <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="net462" />
   <package id="System.Security.AccessControl" version="6.0.0" targetFramework="net462" />
-  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net462" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net462" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net462" />
-  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net462" />
-  <package id="System.Security.Permissions" version="6.0.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net462" />
+  <package id="System.Security.Permissions" version="8.0.0" targetFramework="net462" />
   <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net462" />
   <package id="System.ServiceModel.Primitives" version="4.10.3" targetFramework="net462" />
   <package id="System.Text.Encodings.Web" version="8.0.0" targetFramework="net462" />
-  <package id="System.Text.Json" version="8.0.0" targetFramework="net462" />
+  <package id="System.Text.Json" version="8.0.3" targetFramework="net462" />
   <package id="System.Threading" version="4.3.0" targetFramework="net462" />
   <package id="System.Threading.Channels" version="8.0.0" targetFramework="net462" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net462" />
